fixed overlapping text and fixed font size

--- a/server/react/src/styles/contact.css
+++ b/server/react/src/styles/contact.css
@@ -56,7 +56,7 @@
   margin-bottom: 20px;
   font-weight: bold;
   font-family:Inter, system-ui, sans-serif;
-  font-size: x-large;
+  
 }
 
 .cta-btn{
