--- a/server/react/src/styles/skills.css
+++ b/server/react/src/styles/skills.css
@@ -50,7 +50,7 @@
 }
 .skill-form{
   text-align: center;
-  color: #fff;
+  color: #1d8db9;
   width: 105%;
   font-weight: bold;
   font-family: Inter, system-ui, sans-serif;
